src/test/deca/syntax/invalid/HelloWorld/Inst4-NoCP.deca
// Description:
//    tests de println sans parenthèse fermante
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{
println("Hello";
}
